# info1_vorlesung_ss24

./: .gitignore  CMakeLists.txt  README.md
termin_01/: 01_intro.c  02_division.c  03_binaerUmrechnung.c  04_binaerZahl.c  05_bmi.c  06_bit_shift_operatoren.c  07_ledAnsteuern.c
termin_02/: 01_intro.c  02_winkel.c  03_mwst.c  04_anteile.c  05_alphabet.c  06_rechner.c  07_zahlenVergleich.c  mymath.h
termin_03/: 01_castingLesen.c  02_explizitesCasting.c  03_verkehrsteilnehmer.c  04_taschenrechner.c  05_bedingteBewertung.c  06_ifElseGrab.c
termin_04/: 01_eingabePruefung.c  02_binaerUmrechnungSchleife.c  03_asciiTabelle.c  04_heron.c
termin_05/: 01_maexchen.c  02_wuerfelSpiel.c  02_wuerfelSpiel.h  02_wuerfelSpielMain.c  03_quadPlatten.c
termin_06/: 01_zeigerLesen.c  02_reverseEngineering.c  03_rotiere.c  04_wechselgeld.c  05_divisionMitRest.c
termin_07/: 01_rotiereArray.c  02_selectionsort.c  03_mastermind.c  mastermind_eingabe.c  mastermind_eingabe.h  mastermind_logik.c  mastermind_logik.h
termin_08/: 01_noten.c  02_codeNachricht.c  03_sortiereMatrix.c
termin_09/sortierung/: makefile  sortierung.c  sortierung.h  sortierungTest.c  sortierungsvergleich.c
termin_09/suche/: makefile  suche.c  suche.h  sucheTest.c  zaehleVorkommen.c
termin_09/utils/: zahlenEingabe.c  zahlenEingabe.h
